--- a/UIs/nSbarra.ui
+++ b/UIs/nSbarra.ui
@@ -86,7 +86,7 @@
       </font>
      </property>
      <property name="toolTip">
-      <string>gamma</string>
+      <string>γ color</string>
      </property>
      <property name="text">
       <string>gamma</string>
