--- a/UIs/nColorBarWin.ui
+++ b/UIs/nColorBarWin.ui
@@ -62,7 +62,7 @@
         </property>
         <item row="0" column="0">
          <widget class="QWidget" name="widget_3" native="true">
-          <layout class="QGridLayout" name="gridLayout_8" columnstretch="1,0,0,0,0">
+          <layout class="QGridLayout" name="gridLayout_8" columnstretch="1,0,0,0,0,0">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -87,7 +87,7 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="1">
+           <item row="0" column="2">
             <widget class="QPushButton" name="invert">
              <property name="font">
               <font>
@@ -100,17 +100,6 @@
             </widget>
            </item>
            <item row="0" column="3">
-            <widget class="QToolButton" name="savePDF">
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset>
-               <normaloff>:icons//savePDF.png</normaloff>:icons//savePDF.png</iconset>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
             <widget class="QCheckBox" name="checkBox">
              <property name="font">
               <font>
@@ -128,7 +117,17 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="4">
+           <item row="0" column="1">
+            <widget class="QSpinBox" name="gamma">
+             <property name="toolTip">
+              <string>γ value (inverse if negative)</string>
+             </property>
+             <property name="minimum">
+              <number>-99</number>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="5">
             <widget class="QToolButton" name="cutoff">
              <property name="text">
               <string>...</string>
@@ -266,12 +265,6 @@
             </widget>
            </item>
           </layout>
-          <zorder>sliderMin</zorder>
-          <zorder>sliderMax</zorder>
-          <zorder>lineMin</zorder>
-          <zorder>lineMax</zorder>
-          <zorder>setToMin</zorder>
-          <zorder>setToMax</zorder>
          </widget>
         </item>
        </layout>
@@ -532,11 +525,10 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>colorbarTabs</tabstop>
   <tabstop>comboBox</tabstop>
+  <tabstop>gamma</tabstop>
   <tabstop>invert</tabstop>
   <tabstop>checkBox</tabstop>
-  <tabstop>savePDF</tabstop>
   <tabstop>cutoff</tabstop>
   <tabstop>histogram</tabstop>
   <tabstop>sliderMin</tabstop>
@@ -554,6 +546,7 @@
   <tabstop>colorlist</tabstop>
   <tabstop>addColor</tabstop>
   <tabstop>palettes</tabstop>
+  <tabstop>colorbarTabs</tabstop>
  </tabstops>
  <resources>
   <include location="../resources/neutrino.qrc"/>
