--- a/UIs/nColorBarWin.ui
+++ b/UIs/nColorBarWin.ui
@@ -6,12 +6,18 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>394</width>
-    <height>344</height>
+    <width>392</width>
+    <height>329</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>ColorBar</string>
+  </property>
+  <property name="iconSize">
+   <size>
+    <width>20</width>
+    <height>20</height>
+   </size>
   </property>
   <property name="unifiedTitleAndToolBarOnMac">
    <bool>true</bool>
@@ -60,87 +66,6 @@
         <property name="bottomMargin">
          <number>4</number>
         </property>
-        <item row="0" column="0">
-         <widget class="QWidget" name="widget_3" native="true">
-          <layout class="QGridLayout" name="gridLayout_8" columnstretch="1,0,0,0,0,0">
-           <property name="leftMargin">
-            <number>0</number>
-           </property>
-           <property name="topMargin">
-            <number>0</number>
-           </property>
-           <property name="rightMargin">
-            <number>0</number>
-           </property>
-           <property name="bottomMargin">
-            <number>0</number>
-           </property>
-           <item row="0" column="0">
-            <widget class="QComboBox" name="comboBox">
-             <property name="enabled">
-              <bool>true</bool>
-             </property>
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QPushButton" name="invert">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-             <property name="text">
-              <string>reverse</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="3">
-            <widget class="QCheckBox" name="checkBox">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
-             </property>
-             <property name="autoFillBackground">
-              <bool>false</bool>
-             </property>
-             <property name="text">
-              <string>Log</string>
-             </property>
-             <property name="checked">
-              <bool>true</bool>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="1">
-            <widget class="QSpinBox" name="gamma">
-             <property name="toolTip">
-              <string>γ value (inverse if negative)</string>
-             </property>
-             <property name="minimum">
-              <number>-99</number>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="5">
-            <widget class="QToolButton" name="cutoff">
-             <property name="text">
-              <string>...</string>
-             </property>
-             <property name="icon">
-              <iconset resource="../resources/neutrino.qrc">
-               <normaloff>:/icons/saveClipboard.png</normaloff>:/icons/saveClipboard.png</iconset>
-             </property>
-            </widget>
-           </item>
-          </layout>
-         </widget>
-        </item>
         <item row="1" column="0">
          <widget class="nHistogram" name="histogram" native="true">
           <property name="minimumSize">
@@ -167,7 +92,7 @@
         </item>
         <item row="2" column="0">
          <widget class="QWidget" name="widget" native="true">
-          <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0,0">
+          <layout class="QGridLayout" name="gridLayout_4" columnstretch="1,0,0,0">
            <property name="leftMargin">
             <number>0</number>
            </property>
@@ -180,14 +105,44 @@
            <property name="bottomMargin">
             <number>0</number>
            </property>
-           <item row="0" column="0">
-            <widget class="QSlider" name="sliderMin">
+           <item row="1" column="2">
+            <widget class="QPushButton" name="setToMax">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>Max</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="lineMax">
+             <property name="font">
+              <font>
+               <pointsize>10</pointsize>
+              </font>
+             </property>
+             <property name="text">
+              <string>1.0</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="0">
+            <widget class="QSlider" name="sliderMax">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
               </font>
              </property>
              <property name="maximum">
+              <number>10000</number>
+             </property>
+             <property name="pageStep">
+              <number>1000</number>
+             </property>
+             <property name="value">
               <number>10000</number>
              </property>
              <property name="orientation">
@@ -219,8 +174,8 @@
              </property>
             </widget>
            </item>
-           <item row="1" column="0">
-            <widget class="QSlider" name="sliderMax">
+           <item row="0" column="0">
+            <widget class="QSlider" name="sliderMin">
              <property name="font">
               <font>
                <pointsize>10</pointsize>
@@ -229,41 +184,51 @@
              <property name="maximum">
               <number>10000</number>
              </property>
-             <property name="pageStep">
-              <number>1000</number>
-             </property>
-             <property name="value">
-              <number>10000</number>
-             </property>
              <property name="orientation">
               <enum>Qt::Horizontal</enum>
              </property>
             </widget>
            </item>
-           <item row="1" column="1">
-            <widget class="QLineEdit" name="lineMax">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
+           <item row="0" column="3" rowspan="2">
+            <widget class="QSlider" name="gamma">
+             <property name="toolTip">
+              <string>Image gamma</string>
              </property>
-             <property name="text">
-              <string>1.0</string>
+             <property name="minimum">
+              <number>-4</number>
              </property>
-            </widget>
-           </item>
-           <item row="1" column="2">
-            <widget class="QPushButton" name="setToMax">
-             <property name="font">
-              <font>
-               <pointsize>10</pointsize>
-              </font>
+             <property name="maximum">
+              <number>6</number>
              </property>
-             <property name="text">
-              <string>Max</string>
+             <property name="pageStep">
+              <number>2</number>
+             </property>
+             <property name="value">
+              <number>1</number>
+             </property>
+             <property name="orientation">
+              <enum>Qt::Vertical</enum>
              </property>
             </widget>
            </item>
+          </layout>
+         </widget>
+        </item>
+        <item row="0" column="0">
+         <widget class="QWidget" name="widget_3" native="true">
+          <layout class="QGridLayout" name="gridLayout_8" columnstretch="0">
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <property name="bottomMargin">
+            <number>0</number>
+           </property>
           </layout>
          </widget>
         </item>
@@ -355,7 +320,7 @@
          <number>4</number>
         </property>
         <item row="4" column="0">
-         <widget class="QTreeWidget" name="palettes">
+         <widget class="QTreeWidget" name="paletteColorlist">
           <property name="font">
            <font>
             <pointsize>10</pointsize>
@@ -515,6 +480,72 @@
     </font>
    </property>
   </widget>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="floatable">
+    <bool>false</bool>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionInvert"/>
+   <addaction name="actionCutoff"/>
+   <addaction name="actionLog"/>
+  </widget>
+  <action name="actionInvert">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../resources/neutrino.qrc">
+     <normaloff>:/icons/invert_colorbar.png</normaloff>:/icons/invert_colorbar.png</iconset>
+   </property>
+   <property name="text">
+    <string>inver</string>
+   </property>
+   <property name="toolTip">
+    <string>Invert colorbar</string>
+   </property>
+  </action>
+  <action name="actionCutoff">
+   <property name="icon">
+    <iconset resource="../resources/neutrino.qrc">
+     <normaloff>:/icons/expand.png</normaloff>:/icons/expand.png</iconset>
+   </property>
+   <property name="text">
+    <string>cutoff</string>
+   </property>
+   <property name="toolTip">
+    <string>New image with colorscale </string>
+   </property>
+  </action>
+  <action name="actionLog">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../resources/neutrino.qrc">
+     <normaloff>:/icons/histoNorm.png</normaloff>
+     <normalon>:/icons/histolog.png</normalon>:/icons/histoNorm.png</iconset>
+   </property>
+   <property name="text">
+    <string>Log</string>
+   </property>
+   <property name="toolTip">
+    <string>Log histogram</string>
+   </property>
+   <property name="neutrinoSave" stdset="0">
+    <bool>true</bool>
+   </property>
+  </action>
  </widget>
  <customwidgets>
   <customwidget>
@@ -525,11 +556,6 @@
   </customwidget>
  </customwidgets>
  <tabstops>
-  <tabstop>comboBox</tabstop>
-  <tabstop>gamma</tabstop>
-  <tabstop>invert</tabstop>
-  <tabstop>checkBox</tabstop>
-  <tabstop>cutoff</tabstop>
   <tabstop>histogram</tabstop>
   <tabstop>sliderMin</tabstop>
   <tabstop>sliderMax</tabstop>
@@ -545,7 +571,7 @@
   <tabstop>removePalette</tabstop>
   <tabstop>colorlist</tabstop>
   <tabstop>addColor</tabstop>
-  <tabstop>palettes</tabstop>
+  <tabstop>paletteColorlist</tabstop>
   <tabstop>colorbarTabs</tabstop>
  </tabstops>
  <resources>
