moved nView and nScene to more appropriate graphics dir

--- a/UIs/neutrino.ui
+++ b/UIs/neutrino.ui
@@ -872,7 +872,7 @@
   <customwidget>
    <class>nView</class>
    <extends>QGraphicsView</extends>
-   <header>../src/nView.h</header>
+   <header>../src/graphics/nView.h</header>
   </customwidget>
  </customwidgets>
  <resources>
